--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
             aiContainer.className = 'ai-buttons-container w-full sm:w-auto';
             const mainAiButton = document.createElement('button');
             mainAiButton.className = 'w-full sm:w-auto px-6 py-2 bg-blue-500 text-white rounded-md font-semibold hover:bg-blue-600 transition-colors duration-200 flex items-center justify-center gap-2';
-            mainAiButton.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5"><path fill-rule="evenodd" d="M9.293 2.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414L11 5.414V14a1 1 0 1 1-2 0V5.414L6.707 7.707a1 1 0 0 1-1.414-1.414l4-4Z" clip-rule="evenodd" /><path fill-rule="evenodd" d="M.5 13.5A.5.5 0 0 1 1 13h18a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5ZM13 16.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Z" clip-rule="evenodd" /></svg> Estudar com IA`;
+            mainAiButton.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5"><path fill-rule="evenodd" d="M9.293 2.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414L11 5.414V14a1 1 0 1 1-2 0V5.414L6.707 7.707a1 1 0 0 1-1.414-1.414l4-4Z" clip-rule="evenodd" /><path fill-rule="evenodd" d="M.5 13.5A.5.5 0 0 1 1 13h18a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5ZM13 16.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5Z" clip-rule="evenodd" /></svg> Google modo IA`;
             aiContainer.appendChild(mainAiButton);
             const subButtonsContainer = document.createElement('div');
             subButtonsContainer.className = 'sub-buttons-container flex flex-col sm:flex-row flex-wrap gap-2 mt-2 w-full sm:w-auto';
