--- a/index.html
+++ b/index.html
@@ -965,7 +965,8 @@
                 { texto: "Glossário", prompt: "Extraia os principais termos jurídicos ou conceitos complexos presentes no enunciado e nas alternativas. Para cada termo, forneça uma definição clara e concisa em formato de glossário." },
                 { texto: "Dicas", prompt: "Com base no tema desta questão, forneça dicas entratégicas estratégicas e 'bizus' para NÃO cair em pegadinhas comuns de prova de concurso." },
                 { texto: "Perguntas", prompt: "Com base no tema desta questão, crie perguntas que o estudante de direito precisa saber respondar. Responda todas elas de forma objetiva." },
-                { texto: "Videoaula", prompt: "Encontre 3 videosaulas do YouTube que abordem o tema desta questão. Forneça os títulos dos vídeos e os links diretos para cada um. Priorize vídeos de canais renomados e com boa didática." }
+                { texto: "Videoaula", prompt: "Encontre 3 videosaulas do YouTube que abordem o tema desta questão. Forneça os títulos dos vídeos e os links diretos para cada um. Priorize vídeos de canais renomados e com boa didática." },
+                { texto: "Artigos", prompt: "Com base no tema desta questão, encontre artigos nos sites migalhas, conjur e jusbrasil." }
             ];
             promptsAI.forEach(promptInfo => {
                 const btn = document.createElement('button');
