--- a/index.html
+++ b/index.html
@@ -966,7 +966,7 @@
                 { texto: "Dicas", prompt: "Com base no tema desta questão, forneça dicas entratégicas estratégicas e 'bizus' para NÃO cair em pegadinhas comuns de prova de concurso." },
                 { texto: "Perguntas", prompt: "Com base no tema desta questão, crie perguntas que o estudante de direito precisa saber respondar. Responda todas elas de forma objetiva." },
                 { texto: "Videoaula", prompt: "Encontre 3 videosaulas do YouTube que abordem o tema desta questão. Forneça os títulos dos vídeos e os links diretos para cada um. Priorize vídeos de canais renomados e com boa didática." },
-                { texto: "Artigos", prompt: "Com base no tema desta questão, encontre artigos nos sites migalhas, conjur e jusbrasil." }
+                { texto: "Artigos", prompt: "Com base no tema desta questão, encontre de 3 artigos em sites jurídicos como migalhas, conjur ou jusbrasil, me de os links para acessar." }
             ];
             promptsAI.forEach(promptInfo => {
                 const btn = document.createElement('button');
