--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
             const promptsAI = [
                 { texto: "Comentário", prompt: "Comente o gabarito e fundamente sua explicação com embasamento jurídico detalhado, citando artigos de leis se possível. Explique por que a alternativa correta está certa e as outras estão erradas. Utilize uma linguagem formal e didática." },
                 { texto: "Glossário", prompt: "Extraia os principais termos jurídicos ou conceitos complexos presentes no enunciado e nas alternativas. Para cada termo, forneça uma definição clara e concisa em formato de glossário." },
-                { texto: "Dicas", prompt: "Com base no tema desta questão, forneça dicas entratégicas estratégicas e 'bizus' para NÃO cair em pegadinhas comuns de prova de concurso." },
+                { texto: "Dicas", prompt: "Com base no tema desta questão, indique possíveis pegadinhas de provas de concurso sobre o tema." },
                 { texto: "Perguntas", prompt: "Com base no tema desta questão, crie perguntas que o estudante de direito precisa saber respondar. Responda todas elas de forma objetiva." },
                 { texto: "Videoaula", prompt: "Encontre 3 videosaulas do YouTube que abordem o tema desta questão. Forneça os títulos dos vídeos e os links diretos para cada um. Priorize vídeos de canais renomados e com boa didática." },
                 { texto: "Artigos", prompt: "Com base no tema desta questão, encontre de 3 artigos em sites jurídicos como migalhas, conjur ou jusbrasil, me de os links para acessar." }
