--- a/vademecum/index.html
+++ b/vademecum/index.html
@@ -294,7 +294,7 @@
         <div id="categorySelection" class="max-w-4xl mx-auto p-4 md:p-8 w-full">
             <div class="space-y-4">
                 <button onclick="loadCode('data/DEL2848compilado.html', 'Código Penal', 'https://www.planalto.gov.br/ccivil_03/decreto-lei/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
-                    Código Penal (Decreto-Lei nº 2.848/1940)
+                    Código Penal
                 </button>
                 <button onclick="loadCode('data/civil1.html', 'Código Civil', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
                      Código Civil
@@ -304,6 +304,12 @@
                        </button>
                 <button onclick="loadCode('data/processopenal.html', 'Código Civil', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
                      Código Processo Penal
+                    </button>
+                <button onclick="loadCode('data/CLT.html', 'CLT', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+                     CLT
+                    <button onclick="loadCode('data/CODIGO ELEITORAL.html', 'CLT', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+                     CÓDIGO ELEITORAL
+                
                 
                 </div>
             </div> </div>
