--- a/vademecum/index.html
+++ b/vademecum/index.html
@@ -293,23 +293,69 @@
     <div id="main-container" class="flex-grow flex flex-col overflow-hidden">
         <div id="categorySelection" class="max-w-4xl mx-auto p-4 md:p-8 w-full">
             <div class="space-y-4">
-                <button onclick="loadCode('data/DEL2848compilado.html', 'Código Penal', 'https://www.planalto.gov.br/ccivil_03/decreto-lei/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
-                    Código Penal
-                </button>
-                <button onclick="loadCode('data/civil1.html', 'Código Civil', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
-                     Código Civil
-                       </button>
-                <button onclick="loadCode('data/processocivil.html', 'Código Civil', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
-                     Código Processo Civil
-                       </button>
-                <button onclick="loadCode('data/processopenal.html', 'Código Civil', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
-                     Código Processo Penal
-                    </button>
-                <button onclick="loadCode('data/CLT.html', 'CLT', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
-                     CLT
-                    <button onclick="loadCode('data/CODIGO ELEITORAL.html', 'CLT', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
-                     CÓDIGO ELEITORAL
-                
+                <button onclick="loadCode('data/codigo civil.html', 'Código Civil', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Código Civil
+</button>
+<button onclick="loadCode('data/codigo de defesa do consumidor.html', 'Código de Defesa do Consumidor', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Código de Defesa do Consumidor
+</button>
+<button onclick="loadCode('data/codigo de processo penal.html', 'Código de Processo Penal', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Código de Processo Penal
+</button>
+<button onclick="loadCode('data/codigo de trânsito brasileiro.html', 'Código de Trânsito Brasileiro', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Código de Trânsito Brasileiro
+</button>
+<button onclick="loadCode('data/codigo eleitoral.html', 'Código Eleitoral', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Código Eleitoral
+</button>
+<button onclick="loadCode('data/codigo florestal.html', 'Código Florestal', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Código Florestal
+</button>
+<button onclick="loadCode('data/codigo penal militar.html', 'Código Penal Militar', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Código Penal Militar
+</button>
+<button onclick="loadCode('data/codigo processo penal.html', 'Código Processo Penal', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Código Processo Penal
+</button>
+<button onclick="loadCode('data/codigo tributario nacional.html', 'Código Tributário Nacional', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Código Tributário Nacional
+</button>
+<button onclick="loadCode('data/consolidação das leis do trabalho.html', 'Consolidação das Leis do Trabalho', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Consolidação das Leis do Trabalho
+</button>
+<button onclick="loadCode('data/Constituição.html', 'Constituição', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Constituição Federal
+</button>
+<button onclick="loadCode('data/Estatuto da Advocacia e da Ordem dos Advogados do Brasil.html', 'Estatuto da Advocacia e da Ordem dos Advogados do Brasil', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Estatuto da Advocacia e da Ordem dos Advogados do Brasil
+</button>
+<button onclick="loadCode('data/Estatuto da Cidade.html', 'Estatuto da Cidade', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Estatuto da Cidade
+</button>
+<button onclick="loadCode('data/Estatuto da Criança e do Adolescente.html', 'Estatuto da Criança e do Adolescente', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Estatuto da Criança e do Adolescente
+</button>
+<button onclick="loadCode('data/Estatuto da Igualdade Racial.html', 'Estatuto da Igualdade Racial', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Estatuto da Igualdade Racial
+</button>
+<button onclick="loadCode('data/Estatuto da Juventude.html', 'Estatuto da Juventude', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Estatuto da Juventude
+</button>
+<button onclick="loadCode('data/Estatuto de Defesa do Torcedor.html', 'Estatuto de Defesa do Torcedor', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Estatuto de Defesa do Torcedor
+</button>
+<button onclick="loadCode('data/Estatuto do Desarmamento.html', 'Estatuto do Desarmamento', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Estatuto do Desarmamento
+</button>
+<button onclick="loadCode('data/Estatuto do Idoso.html', 'Estatuto do Idoso', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Estatuto do Idoso
+</button>
+<button onclick="loadCode('data/Lei de Improbidade Administrativa.html', 'Lei de Improbidade Administrativa', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Lei de Improbidade Administrativa
+</button>
+<button onclick="loadCode('data/lei maria da penha.html', 'Lei Maria da Penha', 'https://www.planalto.gov.br/ccivil_03/leis/')" class="w-full bg-white p-4 rounded-lg shadow hover:shadow-md transition text-left text-lg font-medium text-gray-700">
+    Lei Maria da Penha
+</button>                
                 
                 </div>
             </div> </div>
