--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                     <h1 class="text-2xl font-bold text-gray-900">MeuJus</h1>
                 </div>
                 <div class="flex space-x-4">
-                    <a href="/" class="text-blue-600 border-b-2 border-blue-600 px-3 py-2 rounded-md text-sm font-medium" aria-current="page">Estudo</a>
-                    <a href="/vademecum/" class="text-gray-500 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">Vademecum</a>
+                    <a href="/" class="text-blue-600 border-b-2 border-blue-600 px-3 py-2 rounded-md text-sm font-medium" aria-current="page">Questões</a>
+                    <a href="/vademecum/" class="text-gray-500 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">Leis</a>
                 </div>
             </div>
         </div>
